# library

./: CMakeLists.txt  README.md
lib/include/lib/: lib.hpp
lib/src/: lib.cpp
tests/: CMakeLists.txt  test.cpp
